RDCC-4453: addressing Sonar Issues in OrganisationsDetailResponse.java